fix(waiting): specify flex shrink and grow to prevent collapse
Otherwise safair will let the container of the waiting view
contents shrink in height and overlap the top date and
bottom nav buttons.

--- a/spot-client/src/common/css/page-layouts/_waiting-view.scss
+++ b/spot-client/src/common/css/page-layouts/_waiting-view.scss
@@ -4,7 +4,8 @@
     .waiting-sub-view {
         align-items: center;
         display: flex;
-        flex: 1;
+        flex-shrink: 0;
+        flex-grow: 1;
         justify-content: center;
     }
 
